# fifteen-puzzle

./: .dockerignore  .gitignore  Dockerfile.nix-cross-android  LICENSE  Makefile  fifteen-puzzle.cabal  fifteen-puzzle.ccs  stack.yaml
Classes/: AppDelegate.cpp  FifteenPuzzle_stub.h
hs-src/: FifteenPuzzle.hs
hs-src/FifteenPuzzle/: Main.hs
include/ghc-7.10.2/: Cmm.h  DerivedConstants.h  MachDeps.h  Rts.h  RtsAPI.h  Stg.h  ffi.h  ffitarget.h  ghcautoconf.h  ghcversion.h
include/ghc-7.10.2/rts/: BlockSignals.h  Bytecodes.h  Config.h  Constants.h  EventLogFormat.h  FileLock.h  Flags.h  Globals.h  Hooks.h  Linker.h  Main.h  Messages.h  OSThreads.h  Signals.h  StaticPtrTable.h  TTY.h  Threads.h
include/ghc-7.10.2/rts/prof/: CCS.h  LDV.h
include/ghc-7.10.2/rts/storage/: ClosureMacros.h  Closures.h  GC.h  InfoTables.h  MBlock.h  TSO.h
include/ghc-7.10.2/stg/: HaskellMachRegs.h  MachRegs.h  MiscClosures.h  Prim.h  Regs.h  RtsMachRegs.h  SMP.h  Ticky.h  Types.h
include/ghc-8.0.2/: Cmm.h  DerivedConstants.h  HsFFI.h  Rts.h  RtsAPI.h  Stg.h  ffi.h  ghcautoconf.h  ghcconfig.h  ghcplatform.h  ghcversion.h
include/ghc-8.0.2/rts/: Adjustor.h  Constants.h  EventLogFormat.h  Flags.h  GetTime.h  Hpc.h  IOManager.h  Libdw.h  LibdwPool.h  Linker.h  Parallel.h  PrimFloat.h  SpinLock.h  Stable.h  Ticky.h  Timer.h  Types.h  Utils.h
include/ghc-8.0.2/stg/: DLL.h  HaskellMachRegs.h  MachRegs.h  MiscClosures.h  Prim.h  RtsMachRegs.h  SMP.h  Ticky.h  Types.h
proj.android-studio/: build-cfg.json  settings.gradle
proj.android-studio/app/: AndroidManifest.xml  build.gradle  build.xml
proj.android-studio/app/jni/: Android.mk  Application.mk
proj.android-studio/gradle/wrapper/: gradle-wrapper.properties
(+38 files in other folders)
