name:                fifteen-puzzle
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Lingnan Dai
maintainer:          lingnan.d@gmail.com
-- copyright:
category:            Game
build-type:          Simple
cabal-version:       >=1.10

flag target-mac
  description: Build for Mac
  default: False
  manual: True

flag target-android
  description: Build for Android
  default: False
  manual: True

executable fifteen-puzzle
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs:      hs-src
  main-is:             FifteenPuzzle.hs
  build-depends:       base >=4.8 && <5
                     , colour
                     , reflex
                     , lens
                     , linear
                     , reflex-cocos2d
                     , cocos2d-hs
                     , diagrams-lib
                     , mtl
                     , transformers
                     , array
                     , MonadRandom
  default-language:    Haskell2010

  -- ### stubdir controls where the stub file is put
  ghc-options:         -Wall -threaded -stubdir Classes -fno-warn-name-shadowing -no-hs-main
  if flag(target-mac)
    -- ### additional Mac options (to compile it as a single lib that exports the main haskell entry)
    ghc-options: -o fifteen-puzzle -staticlib -pgmlibtool libtool-quiet
  else
    if flag(target-android)
      -- ### additional android options
      ghc-options: -fPIC
      ld-options:  -shared -Wl,-soname,libfifteen_puzzle.so